# Multi-Horizon-Stock-Forecasting-AI-Model

./: .gitignore  Dockerfile  README.md  app.py  build_dataset.py  data_guards.py  docker-compose.yml  pyproject.toml  requirements.txt  retrain.py  start_app.bat  start_app.py  start_app_simple.py  vercel.json
.github/workflows/: ci.yml  retrain.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
lstm_final_project/: infer_lstm.py  lstm_meta.pkl  lstm_multi_horizon.pth  lstm_scaler_feat.pkl  lstm_scaler_targ.pkl  train_lstm.py
nextjs/: next.config.js  package.json  tailwind.config.js
rf_final/: feature_list_multi.pkl  infer_rf.py  train_rf.py
rnn_final/: infer_rnn.py  rnn_meta.pkl  rnn_multi_horizon.pth  rnn_scaler_feat.pkl  rnn_scaler_targ.pkl  train_rnn.py
src/mhf/: config.py  constants.py  train.py
tests/: conftest.py  test_constants.py  test_smoke.py  test_train_smoke.py
tests/data/: test_assemble.py  test_build.py  test_config.py  test_features.py  test_ingest.py  test_market.py  test_quality.py  test_windows.py
tests/eval/: test_backtest.py  test_cv.py  test_metrics.py
tests/models/: test_baselines.py  test_ensemble.py  (+2 more)
transformer_final/: LC_te.pkl  LC_tr.pkl  Px_te.pkl  Px_tr.pkl  Ret_te.pkl  Ret_tr.pkl  app.py  enhanced_app.py  evaluate_transformer.py  infer_transformer.py  requirements.txt  scaler_feat.pkl  scaler_ret.pkl  test.py  train_transformer.py  transformer_meta.pkl  transformer_multi_horizon.pth
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
(+59 files in other folders)
