[project]
name = "mhf"
version = "0.1.0"
description = "Multi-horizon probabilistic equity return forecasting"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2.2",
    "pyarrow>=15",
    "yfinance>=0.2.40",
    "tenacity>=8.3",
    "pydantic-settings>=2.3",
    "lxml>=5.2",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mhf"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
